codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__compact_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---










• 工作中 (0s • 按 esc 中断)

• 将在本轮结束时提交的消息
  ↳ Steer submitted while /compact was running.

› Ask Codex to do anything

  gpt-5.6-sol 默认 · /tmp/project
