codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__esc_interrupt_goal_paused_footer@windows.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: snapshot
---
"                                                                                "
"• 工作中 (0s • 按 esc 中断)                                               "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project              Goal paused (/goal resume)    "
