codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_approved_request_permissions_renders_request_summary.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---




✔ 请求已批准：permission request: Need write access for generated report assets.

• 工作中 (0s • 按 esc 中断)


› Ask Codex to do anything

  gpt-5.6-sol 默认 · /tmp/project
