codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__preamble_keeps_working_status.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• 工作中 (0s • 按 esc 中断)                                                     " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (16, " "), (23, " "), (25, " ")]
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.6-sol 默认 · /tmp/project                                             " Hidden by multi-width symbols: [(15, " "), (17, " ")]
